fixed a few thins in game play, detect Game Over when all players are dead.